--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
-before_install:
-  - sudo apt-get install -qq rhino
-script: make test
+language: node_js
+node_js:
+  - "0.11"
+  - "0.10"
+  - "0.8"
+# 0.6 appears to be unreliable on Travis at the moment.
+#  - "0.6"
