--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
         "type": "git",
         "url": "https://github.com/bitwiseshiftleft/sjcl.git"
     },
+    "scripts": {
+      "test": "make test"
+    },
     "engines": { "node": "*" }
 }
