Add ignore section to reduce bower install download from +10MB to just the default sjcl.js plus READMEs

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,12 @@
 {
 	"name": "sjcl",
 	"version": "1.0.0",
-	"main": ["./sjcl.js"]
+	"main": ["./sjcl.js"],
+	"ignore": [
+		"**/*",
+		"!README.md",
+		"!README/*",
+		"!bower.json",
+		"!sjcl.js"
+	]
 }
