--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,5 @@
 {
 	"name": "sjcl",
 	"version": "1.0.0",
-	"main": ["./sjcl.js"],
-	"ignore": [
-		"**/*",
-		"!README.md",
-		"!README/*",
-		"!bower.json",
-		"!sjcl.js"
-	]
+	"main": ["./sjcl.js"]
 }
