Ignore development files in bower.json Previously, no `ignore` list was specificed in `bower.json`. When using `sjcl` in production, this resulted in unnecessary files beeing part of the code base.

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,20 @@
 {
 	"name": "sjcl",
 	"version": "1.0.3",
-	"main": ["./sjcl.js"]
+	"main": ["./sjcl.js"],
+  "ignore": [
+    ".*",
+    "*.md",
+    "Makefile",
+    "config.mk",
+    "configure",
+    "package.json",
+    "browserTest",
+    "compress",
+    "core",
+    "demo",
+    "jsdoc_toolkit-2.3.3-beta",
+    "lint",
+    "test"
+  ]
 }
