Improve travis.yml
With the following commit:
- Compatibility with node 4.2 LTS is put under unit testing (this is mainly the only relevant one to be tested)
- Compatibility with node 0.12 is put under unit-test
- Testing is switched to Travis container-based infrastructure for improved performances of tests (sudo: false)
- Caching is enabled for node_modules directory in order to speed up testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
-before_script: ./configure --with-all
-
+sudo: false
 language: node_js
+cache:
+  directories:
+    - node_modules
 node_js:
+  - "4.2"
+  - "0.12"
   - "0.11"
   - "0.10"
   - "0.8"
-# 0.6 appears to be unreliable on Travis at the moment.
-#  - "0.6"
+before_script: ./configure --with-all
