gitignore compress jars

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ core_closure.js
 node_modules/
 doc/
 doc_private/
+compress/compiler.jar
+compress/compiler-latest.zip
 
 # Swap Files #
 # ########## #
