Add license and homepage fields

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Stanford Javascript Crypto Library",
   "main": "sjcl.js",
   "author": "bitwiseshiftleft",
+  "license": "(BSD-2-Clause OR GPL-2.0-only)",
+  "homepage": "https://github.com/bitwiseshiftleft/sjcl",
   "keywords": [
     "encryption",
     "high-level",
