Fix attempting to load node crypto module outside of node.
Specifying a browser override for the node crypto module prevents
bundlers from attempting to shim the crypto module.

This solves two problems: bundlers that do not automatically shim
the crypto module will not produce errors now, and since SJCL is
actually used in order to create shims of the crypto module, this
eliminates some odd circular require call dependency issues.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "jsdoc": "jsdoc -c jsdoc.conf.json",
     "lint": "eslint . || true"
   },
+  "browser": {
+    "crypto": false
+  },
   "engines": {
     "node": "*"
   },
